Another fix for timeline on narrow screens

--- a/css/style.css
+++ b/css/style.css
@@ -1321,8 +1321,26 @@
 	margin-top: 0;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1280px) {
+	#timeline .timeline-item.follow {
+		margin-top: -120px;
+	}
 
+	#timeline .timeline-item.follow .timeline-content {
+		margin-top: -70px;
+	}
+
+	#timeline .timeline-item.follow .timeline-content.right {
+		margin-top: 0;
+	}
+
+	#timeline .timeline-item.follow.long {
+		margin-top: -240px;
+	}
+
+	#timeline .timeline-item.follow.long .timeline-content {
+		margin-top: 0;
+	}
 }
 
 @media screen and (max-width: 768px) {
